# gem2caom2

./: Dockerfile  README.md  config.yml  setup.cfg  setup.py
.github/workflows/: build.yml  docker.yml
config/: cache.yml  config_with_ingest.yml  config_with_visit.yml
gem2caom2/: __init__.py  builder.py  caom2_gmos.py  cleanup_augmentation.py  composable.py  data_source.py  external_metadata.py  fits2caom2_augmentation.py  gem_name.py  gem_obs_file_relationship.py  gemini_metadata.py  gemini_obs_metadata.py  gemini_reader.py  ghost_preview_augmentation.py  instruments.py  main_app.py  obs_file_relationship.py  obs_metadata.py  plane_augmentation.py  preview_augmentation.py  preview_v_augmentation.py  program_metadata.py  pull_augmentation.py  pull_v_augmentation.py  pull_visitor.py  scrape.py  svofps.py  util.py  validator.py  work.py
gem2caom2/tests/: config.yml  conftest.py  gem_mocks.py  test_broken_obs.py  test_builder.py  test_caom_gen_visit.py  test_composable.py  test_data_source.py  test_external_metadata.py  test_gem_obs_file_relationship.py  test_gemini_metadata.py  test_gemini_metadata_reader.py  test_main_app.py  test_meta_visit_edge_cases.py  test_multi_plane.py  test_program_metadata.py  test_pull_augmentation.py  test_scrape.py  test_storage_name.py  test_svofps.py  test_unauthorized.py  test_validator.py  test_visitors.py  test_work.py
gem2caom2/tests/data/: GN-2002A-C-4-2-001.in.xml  GN-2002A-C-5-1-001.xml  GN-2002A-C-5-21-002.in.xml  GN-2013B-Q-28-150-002.in.xml  GN-2013B-Q-28-150-002.xml  GN-2015A-C-1-27-001.in.xml  GN-2015A-C-1-27-001.xml  GN-2015A-C-2-96-002.in.xml  GN-2015A-C-2-96-002.xml  GN-2015A-C-4-24-086.xml  GN-2015A-Q-91-5-002.in.xml  GN-2015A-Q-91-5-002.xml  GN-CAL20150217-2-003.in.xml  GN-CAL20150217-2-003.xml  GN-CAL20150925-2-007.in.xml  GN-CAL20150925-2-007.xml  GS-2008A-C-5-35-002.fits.xml  GS-2019B-Q-222-181-001.expected.xml  N20020620S0021.fits.header  N20020620S0035.fits.header  N20020620S0315.fits.header  N20131203S0006.fits.header  N20150216S0142.fits.header  N20150217S0274.fits.header  N20150217S0380.fits.header  N20150220S0320.fits.header  N20150929S0013.fits.header  N20220314S0229.fits  S20191010S0.html  S20191010S3.html  cleanup_aug_start_obs.xml  cleanup_bad_uris_start.xml  cleanup_fox_aug_start.xml  cleanup_no_cleanup_aug_start_obs.xml  config.yml  (+19 more)
scripts/: config.yml  config_with_ingest.yml  config_with_visit.yml  content_length_checksum_plugin.py  docker-entrypoint.sh  gem_run.sh  gem_run_builder.sh  gem_run_direct.sh  gem_run_edu_filepre_query.sh  gem_run_edu_query.sh  gem_run_incremental.sh  gem_run_public.sh  gem_run_query.sh  gem_run_state.sh  gem_validate.sh  get_gem_file.sh  get_gem_json.sh  run_gem.sh  state.yml
(+2232 files in other folders)
