[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled
# addopts = --runslow
testpaths = gem2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = gem2caom2
description = Starting point for application to generate CAOM2 observations.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = opencadc-metadata-curation/gem2caom2
install_requires = caom2utils caom2repo cadcdata
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.7.1

[entry_points]
gem2caom2 = gem2caom2:gem_main_app
gem_run = gem2caom2.composable:run
gem_run_single = gem2caom2.composable:run_single
gem_run_public = gem2caom2.composable:run_by_public
gem_run_incremental = gem2caom2.composable:run_by_incremental
gem_run_state = gem2caom2.composable:run_by_incremental
gem_validate = gem2caom2.validator:validate
