[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[aliases]
test = pytest

[coverage:run]
omit = */tests/*

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
testpaths = gem2caom2

[bdist_wheel]
universal=1

[metadata]
package_name = gem2caom2
description = Starting point for application to generate CAOM2 observations.
long_description = TBD 
author = Canadian Astronomy Data Centre
author_email = cadc@nrc-cnrc.gc.ca
license = AGPLv3
url = TBD
edit_on_github = False
github_project = opencadc-metadata-curation/gem2caom2
install_requires =
    bs4
    cadcdata
    cadctap
    caom2
    caom2repo
    importlib-metadata
    matplotlib
    pillow
    python-dateutil
    PyYAML
    spherical-geometry
    vos
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.12.0

[flake8]
max-line-length = 120

[entry_points]
gem_run = gem2caom2.composable:run
gem_run_public = gem2caom2.composable:run_by_public
gem_run_incremental_original = gem2caom2.composable:run_state
gem_run_incremental = gem2caom2.composable:run_incremental_diskfiles
gem_run_incremental_diskfiles = gem2caom2.composable:run_incremental_diskfiles
gem_validate = gem2caom2.validator:validate
